# MagicCube

./: .gitignore  CMakeLists.txt  GLWindows.h  LICENSE  LayerBridge.cpp  MagicCube.cpp  MagicCube.h  MagicCube.state  MagicCubeLauncher.cpp  Shader.h  glad.c  main.cpp  matrix.cpp  test.cpp  util.cpp
HeaderFiles/: Camera.h  Color.h  ColorState.cpp  ColorState.h  GLWindows.h  Image.h  MagicCube.h  Matrix.cpp  Matrix.h  RenderPoint.h  SetVertices.h  Shader.h  Text.h  util.h
Layers/: LayerBridge.cpp  LogicLayer.cpp  LogicLayer.h  RenderLayer.cpp  RenderLayer.h
Shaders/: MagicCube.fs  MagicCube.vs  Text.fs  Text.vs  fragmentShader.fs  vertexShader.vs
images/: DeveloperInfo.psd  Solving.psd  rendertext.psd
layers/: LayerBridge.cpp  LogicLayer.cpp  LogicLayer.h  RenderLayer.cpp  RenderLayer.h
shaders/: Image.fs  Light.fs  Light.vs  MagicCube.vs
solvers/: CUBSOLV.cpp  CUBSOLV.h  JohnnyX.cpp  JohnnyX.h  SmallCubeSolver.cpp  SmallCubeSolver.h  SolverHandler.h  Solvers.h  ct5.cpp  ct5.h  cube.cpp  cube.h  cubecompo.cpp  cubecompo.h  main.cpp  main.h  rubik.cpp  rubik.h  solver.cpp  solver.h
test/: test1.cpp
utils/: Camera.cpp  Camera.h  Color.cpp  Color.h  ColorState.cpp  ColorState.h  Configuration.cpp  Configuration.h  GLWindow.cpp  GLWindows.h  Image.cpp  Image.h  Matrix.cpp  Matrix.h  Shader.cpp  Shader.h  util.cpp  util.h
