cmake_minimum_required(VERSION 3.17)
project(MagicCube)

set(CMAKE_CXX_STANDARD 14)

MATH(EXPR stack_size 102400000)
set(CMAKE_EXE_LINKER_FLAGS "-Wl,--stack,${stack_size}")

set(SOURCE_FILES MagicCubeLauncher.cpp)

include_directories(include)
include_directories(HeaderFiles)
include_directories(${PROJECT_SOURCE_DIR})
#add_library(glfw SHARED IMPORTED)
add_executable(MagicCube ${SOURCE_FILES} glad.c MagicCubeLauncher.cpp)
if (APPLE)
    #    set(GLEW_LINK ${PROJECT_SOURCE_DIR}/lib/libGLEW.2.1.dylib)
    set(GLFW_LINK ${PROJECT_SOURCE_DIR}/lib/libglfw.3.dylib)
    target_link_libraries(MagicCube ${GLFW_LINK})
    target_link_libraries(MagicCube "-framework OpenGL")
    target_link_libraries(MagicCube "-framework GLUT")
else ()
    target_link_libraries(MagicCube ${PROJECT_SOURCE_DIR}/lib/glfw3.dll)
    target_link_libraries(MagicCube ${PROJECT_SOURCE_DIR}/lib/freetype.lib)
    target_link_libraries(MagicCube ${PROJECT_SOURCE_DIR}/lib/freetype.dll)
    target_link_libraries(MagicCube ${PROJECT_SOURCE_DIR}/lib/glut.lib)
    target_link_libraries(MagicCube ${PROJECT_SOURCE_DIR}/lib/glut32.lib)
endif ()